k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticket-system
  labels:
    name: ticket-system
